go/src/github.com/cihangir/gene/example/tinder/errors/facebookfriends.go
package errs

import "errors"

var (
	ErrFacebookFriendsSourceIDNotSet = errors.New("FacebookFriends.SourceID not set")
	ErrFacebookFriendsTargetIDNotSet = errors.New("FacebookFriends.TargetID not set")
)
